progress on the presentation

--- a/web-accessible/index.html
+++ b/web-accessible/index.html
@@ -23,7 +23,7 @@
             <p>Presentation on a specific part of the 
                 <i>resistance against Google</i> empire</p>
             <br>
-            <p>The project is a collective effort, you can reuse this material and <a href="https://github.com/tracking-exposed/krgotrex">propose improvements</a>.</p>
+            <p>The project is a collective effort, <a href="https://github.com/tracking-exposed/krgotrex">github.com/tracking-exposed/krgotrex">propose improvements</a>.</p>
         </section>
         <section>
             <section>
@@ -65,7 +65,7 @@
                     <li> "Campuses" In Other Cities </li>
                     <li> Discrimination </li>
                     <li> Überized/Exploited Tech-Workers Conditions </li>
-                    </li> Tech-gentrification </li>
+                    <li> Tech-gentrification </li>
                 </ul>
             </section>
             <section> <p>Few demo</p><img src="1.jpg" /> </section>
@@ -80,6 +80,76 @@
             </section>
         </section>
         <section>
+
+            <section>
+                <p>Today's agenda</p>
+                <ul>
+                    <li>How we envision the campaing?</li>
+                    <li>How we do the link between gentrification and digital resistance?</li>
+                    <li>Coordination material</li>
+                    <li>Trainig material</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>campaign</h2>
+                <p>
+                    <a href="https://vimeo.com/277322705" target="_blank">UX demo</a>.
+                </p>
+            </section>
+
+            <section>
+                <h2>Site content</h2>
+                <ul>
+                    <li>The test, what does it mean</li>
+                    <li>Link to current material, success</li>
+                    <li>Big picture, links with local issues</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>Art & integration </h2>
+                <ul>
+                    <li>We have to make the website pleasant</li>
+                    <li>We should have the same template for the phisical material</li>
+                    <li>Few possibile artists 
+                        <a href="https://vimeo.com/70397851">Designpreis Halle 2007 - Jon Frickey, Till Penzek: Keine Angst vor dem Atom</a>, 
+                        <a href="http://www.bildbuero.de/index.php?/project/langeweile-war-mein-motor/">Christoph Feist 
+                        </a>.
+                    </li>
+                </ul>
+            </section>
+
+            <section>
+                <a href="http://www.larissafassler.com/kotti_revisited_14.html">kotti revisited</a>
+                <img src="kotti-revisited.png" />
+            </section>
+
+            <section>
+                <h2>Analysis part</h2>
+                <ul>
+                    <li>fetch from OSM</li>
+                    <li>can be automatic the area expansion (3 blocks on 49)</li>
+                    <li>how much frequently should be re-run?</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>digital self-defense</h2>
+                <p>we need an assessment</p>
+                <ul>
+                    <li>what works well on mobile? (I'm using Brave, but someone should do a small research on the options)</li>
+                    <li>
+                        <a href="https://support.mozilla.org/en-US/kb/tracking-protection">Mozilla tracking protection</a>.
+                    </li>
+                    <li>High level: <a href="https://addons.mozilla.org/en-US/firefox/addon/umatrix/">umatrix</a>.</li>
+                    <li><i>what's goes here?</i></li>
+                    <li>Low level: Privacy Badger</li>
+                </ul>
+            </section>
+
+        </section>
+        <section>
             <h2>collaborating with Google is NOT AN OPTION</h2>
             <img src="snitches.jpg" />
         </section>
@@ -87,7 +157,7 @@
             <section>
                 <h2>If Google is so powerful is because of their users</h2>
                 <p>and many resources try to offer replacement to google services</p>
-                <p>LIST TODO</p>
+                <p>https://nomoregoogle.com</p>
             </section>
             <section>
                 <small>
@@ -104,6 +174,15 @@
                     <li>offer replacement</li>
                     <li>no shaming, but not be proud either to have google services</li>
             </section>
+
+            <section>
+                <h2>collaboration process</h2>
+                <p>Mailing list: sign up here :)</p>
+                <p><a href="https://github.com/tracking-exposed/krgotrex/issues/12">repo</a>.</p>
+                <p><a href="https://wiki.fuckoffgoogle.de/index.php?title=InclusionsReplacement">replacements</a>.</p>
+                <p>communication? access points? what else?</p>
+            </section>
+
         </section>
 
     </div> <!-- slides -->
