--- a/web-accessible/index.html
+++ b/web-accessible/index.html
@@ -23,7 +23,7 @@
             <p>Presentation on a specific part of the 
                 <i>resistance against Google</i> empire</p>
             <br>
-            <p>The project is a collective effort, <a href="https://github.com/tracking-exposed/krgotrex">github.com/tracking-exposed/krgotrex">propose improvements</a>.</p>
+            <p>The project is a collective effort, <a href="https://github.com/tracking-exposed/krgotrex">github.com/tracking-exposed/krgotrex</a>.</p>
         </section>
         <section>
             <section>
@@ -84,12 +84,30 @@
             <section>
                 <p>Today's agenda</p>
                 <ul>
-                    <li>How we envision the campaing?</li>
+                    <li>How we envision the campaing? (discussion later)</li>
                     <li>How we do the link between gentrification and digital resistance?</li>
                     <li>Coordination material</li>
                     <li>Trainig material</li>
                 </ul>
             </section>
+
+
+            <section>
+                <h2>The concept</h2>
+                <p>Google infiltrate technologies</p>
+                <p>We can surprise the audience by showing this, and use the attention to explain the broader problem</p>
+                <a href="https://trackography.org/">small demo</a>
+            </section>
+
+            <section>
+                <h4>If you read or clicked anything online today, some part of Google probably knows about it.</h4>
+                <blockquote>It’s one lesson from the largest study yet of the technology that tracks people’s movements around the Web. When Princeton researchers logged the use of tracking code on the Internet’s million most popular websites, Google code was found on a majority of them.
+                </blockquote>
+                <smaller><a href="https://www.technologyreview.com/s/601488/largest-study-of-online-tracking-proves-google-really-is-watching-us-all/">via MIT technology review</a></smaller>
+            </section>
+
+
+
 
             <section>
                 <h2>campaign</h2>
@@ -126,7 +144,12 @@
             </section>
 
             <section>
+                <img src="FOG-animation.gif" />
+            </section>
+
+            <section>
                 <h2>Analysis part</h2>
+                <a href="https://kreuzberg.google.tracking.exposed">https://kreuzberg.google.tracking.exposed</a>.
                 <ul>
                     <li>fetch from OSM</li>
                     <li>can be automatic the area expansion (3 blocks on 49)</li>
@@ -155,24 +178,14 @@
         </section>
         <section>
             <section>
-                <h2>If Google is so powerful is because of their users</h2>
-                <p>and many resources try to offer replacement to google services</p>
-                <p>https://nomoregoogle.com</p>
-            </section>
-            <section>
-                <small>
-                    <blockquote>
-                        Many people contribute to surveillance, without even realizing, by enabling to Google collect data. People disclose data about themselves (for instance when directly using Google technology, or hardware or software embedding them), but also data about others (for instance the visitors of their website). Many websites contain Google technologies, sometimes even without their owners being aware of it, or because they think they provide useful "free" services (maps, analytics, fonts, etc.). In reality, all these infiltrated technologies enable Google to spy on the visitors of such websites
-                    </blockquote>
-                </small>
-            </section>
-            <section>
                 <h2>Concept of the campaign</h2>
                 <ul>
                     <li>focus on "is not your fault, you being exploited"</li>
                     <li>show how much pervasive is google infiltration</li>
                     <li>offer replacement</li>
                     <li>no shaming, but not be proud either to have google services</li>
+                </ul>
+                <p>and many resources try to offer replacement to google services, we can reach out to them? https://nomoregoogle.com</p>
             </section>
 
             <section>
